# sample_test_cpp

./: .gitignore  .gitmodules  Array_of_strings.sln  Array_of_strings.vcxproj  Array_of_strings.vcxproj.filters  CMakeLists.txt  COM_Test.sln  Makefile  Test_cpp.sln  build.bat  build.sh  build_cov.sh  coverage.xml  sonar-project.properties  test.txt  test_cpp.vcxproj  test_utf8_direct.txt  test_win_api.sln
.github/workflows/: build.yml  build.yml.disabled
Client/: CMakeLists.txt  Client.cpp  Client.vcxproj  Client.vcxproj.filters  Create.cpp  Create.h  EncodingUtils.cpp  EncodingUtils.h  IOUtils.cpp  IOUtils.h
Component/: CMakeLists.txt  Component.cpp  Component.def  Component.vcxproj  Component.vcxproj.filters  ComponentWrapper.h  GUIDS.cpp  IFace.h  core guidelines.ruleset  dllmain.cpp
ComponentXZ/: Component.cpp  Component.def  ComponentXZ.def  ComponentXZ.vcxproj  ComponentXZ.vcxproj.filters  dllmain.cpp
ComponentYZ/: Component.cpp  ComponentYZ.def  ComponentYZ.vcxproj  ComponentYZ.vcxproj.filters
Interface/: ComponentWrapper.h  Create.h  IFace.h  IFace.idl  Interface.vcxproj  Interface.vcxproj.filters  InterfaceWrapper.h  InterfaceWrapperBase.h
Interface/details/: IFace.h  IRandom.h  IUnknownRe.h  IX.h  IX2.h  IY.h
include/: stack.h  stackimpl.h  widget.h
src/: GetAdaptersInfoWrapper.cpp  GetAdaptersInfoWrapper.h  Makefile  test.cpp  test_win_api.vcxproj  test_win_api.vcxproj.filters  widget.cpp
tests/: BadComponent.cpp  CMakeLists.txt  ClientExeTest.cpp  ComponentTests.cpp  ComponentWrapperTests.cpp
